<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Camp Potlatch</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="login">Login</string>
    <string name="login_screen">Login Screen</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_global_gifts">Global Gifts</string>
    <string name="post_gift">Post Gift</string>
    <string name="post_a_gift_hint">Post a Gift!</string>
    <string name="title_activity_new_gift">New Gift</string>
    <string name="title_activity_edit_gift">Edit Gift</string>
    <string name="title">Title</string>
    <string name="comments_hint">Comments (optional)</string>
    <string name="gift_image_description">gift image</string>
    <string name="take_photo_button">Take Photo</string>
    <string name="choose_image_button">Choose Image</string>
    <string name="post_button">Post</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_edit_user_account">EditUserAccount</string>

    <string-array name="gifts_update_periods">
        <item>1 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>30 min</item>
        <item>60 min</item>
    </string-array>
    <string-array name="navigation_titles">
        <item>New Gifts</item>
        <item>Top Gifts</item>
        <item>User Gifts</item>
        <item>Users</item>
        <item>Top Gifts Givers</item>
        <item>User Account</item>
    </string-array>

    <string name="title_activity_view_gift">ViewGiftActivity</string>
    <string name="title_activity_user_gifts">UserGiftsActivity</string>
    <string name="title_activity_related_gifts">RelatedGiftsActivity</string>
    <string name="title_activity_top_gifts">TopGiftsActivity</string>
    <string name="title_activity_top_gifts_givers">TopGiftsGiversActivity</string>
    <string name="title_activity_view_user_account">ViewUserAccountActivity</string>
    <string name="title_activity_change_password_user_account">ChangePasswordUserAccountActivity</string>
    <string name="title_activity_view_gift_image">ViewGiftImageActivity</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
