<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.coursera.camppotlatch.client.view.EditGiftActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_text"
            android:hint="@string/title"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="135dp"
            android:maxHeight="270dp"
            android:id="@+id/image_view"
            android:contentDescription="@string/gift_image_description"
            android:clickable="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/comments_text"
            android:hint="@string/comments_hint"
            android:minHeight="67dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/save_button"/>
    </LinearLayout>
</LinearLayout>

